--- a/Vagrantfile.erb
+++ b/Vagrantfile.erb
@@ -2,6 +2,7 @@ Vagrant.configure("2") do |c|
   c.vm.box = "<%= config[:box] %>"
   c.vm.box_url = "<%= config[:box_url] %>"
   c.vm.hostname = "<%= instance.name %>.vagrantup.com"
+  c.cache.scope = :box
   c.cache.auto_detect = true
 
 <% if config[:guest] %>
